<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Assign2Activity"
    android:background="@android:color/holo_orange_dark">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_ushimachi"
        android:id="@+id/btnUshimachi"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_blue_bright"
        android:textSize="@dimen/text_size" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_plum_estate"
        android:id="@+id/btnPlumEstate"
        android:layout_above="@+id/btnUshimachi"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_blue_bright"
        android:layout_marginBottom="@dimen/button_margin"
        android:textSize="@dimen/text_size" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_moon_pine"
        android:id="@+id/btnMoonPine"
        android:layout_above="@+id/btnPlumEstate"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_blue_bright"
        android:layout_marginBottom="@dimen/button_margin"
        android:textSize="@dimen/text_size" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_dyers"
        android:id="@+id/btnDyers"
        android:layout_above="@+id/btnMoonPine"
        android:layout_alignStart="@+id/btnMoonPine"
        android:background="@android:color/holo_blue_bright"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_marginTop="@dimen/button_margin"
        android:textSize="@dimen/text_size" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageDownloadedView"
        android:layout_alignParentStart="false"
        android:layout_above="@+id/btnDyers"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/image_view_description"
        android:src="@color/material_blue_grey_800" />

</RelativeLayout>
